# happy-shot

./: .gitignore  README.md
.github/workflows/: ci.yaml
backend/: Makefile  pyproject.toml
backend/src/: face_processor.py  line.py  minio.py  s3.py  server.py  smile_detect.py  webrtc.py
frontend/: biome.json  index.html  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/[id]/: page.tsx
frontend/components/: Header.tsx
frontend/components/ui/: progress.tsx
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: Camera.tsx  Gallery.tsx
frontend/src/styles/: camera.css  gallery.css
s3/: Dockerfile  go.mod  go.sum  main.go
